[package]
name = "md5-wasm"
version = "0.7.0"
authors = ["Fabian Vilers <fabian.vilers@dev-one.com>"]
description = "An md5 function implemented in Rust and compiled as a WASM module"
license = "MIT/Apache-2.0"
repository = "https://github.com/yourgithubusername/hello-wasm"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
md5 = "0.7.0"
wasm-bindgen = "0.2.87"
